kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tone-service
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # external-dns
    external-dns.alpha.kubernetes.io/hostname: finn-tone.commitzero.com
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://finn-apidocs.commitzero.com/"

spec:
  rules:
  - host: finn-tone.commitzero.com
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: tone-service
            servicePort: http
  tls:
  - hosts:
    - finn-tone.commitzero.com
    secretName: finntone-tls-secret
